--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
 		<artifactId>sesam-os-base-parent</artifactId>
 		<version>2.0.0</version>
 	</parent>
+
+        <scm>
+                <url>http://acris.googlecode.com</url>
+                <connection>scm:git:https://code.google.com/p/acris.sesam-tools</connection>
+                <developerConnection>scm:git:https://code.google.com/p/acris.sesam-tools</developerConnection>
+        </scm>
 	
 	<build>
 		<plugins>
